# the_movie_system

./: .env  .gitignore  Cargo.toml  DONE.txt  README.md  TODO.txt  clipboard.txt  gh_actions_init.sh  notes.txt  template.env
.github/: gh_actions_init.sh
.github/workflows/: rust.yml
db/: DB_COMMANDS.txt  TODO.txt  clear_table.sql  db_setup.sql  dummy_insert.sql  movie_site.db  movie_site.db-shm  movie_site.db-wal  new_db_setup.sql  setup_db.sql  setup_db1.sql
imdb_autocomplete/: Cargo.toml  DONE.txt  TODO.txt
imdb_autocomplete/src/: lib.rs  req.rs  res.rs  test_functions.rs
imdb_autocomplete/tests/: autocomplete_tests.rs  req_tests.rs
omdb_info/: Cargo.toml
omdb_info/src/: lib.rs
shared_stuff/: Cargo.toml
shared_stuff/src/: add_movies_stuff.rs  auth_structs.rs  db_structs.rs  group_structs.rs  groups_stuff.rs  imdb_structs.rs  lib.rs  omdb_structs.rs  shared_structs.rs  utils.rs
shared_stuff/tests/: shared_tests.rs
test_keys/: jwt_secret.txt
warp_back/: CHANGELOG.txt  Cargo.toml  DONE.txt  NOTES.txt  TODO.txt  login_db  test_db_2  test_db_2-shm  test_db_2-wal
warp_back/src/: auth.rs  db_functions.rs  error_handling.rs  lib.rs  main.rs  new_db_stuff.rs  password_auth.rs  routes.rs  routes1.rs  test_stuff.rs  utils.rs
warp_back/src/db_stuff/: group_db.rs  login_db.rs  mod.rs  query_structs.rs  register_db.rs  shared_db.rs
warp_back/tests/: endpoint_tests.rs  setup_tests.rs
yew_front/: '  Cargo.toml  DONE.txt  TODO.txt  bulma.css  index.html  index.scss  notes.txt
yew_front/src/: auth_requests.rs  error.rs  html_gen.rs  jwt.rs  main.rs  shared_requests.rs  utils.rs
yew_front/src/components/: list_errors.rs  mod.rs
yew_front/src/pages/: add_movies.rs  add_movies_html.rs  all_groups.rs  all_groups_html.rs  group.rs  group_html.rs  groups.rs  groups_html.rs  home.rs  login.rs  login_html.rs  mod.rs  register.rs  register_html.rs  system.rs  system_html.rs  the_system.rs  the_system_html.rs  user.rs  user_html.rs
yew_front/tests/: yew_tests.rs
