[package]
name = "imdb_autocomplete"
version = "0.1.0"
authors = ["simp4t7 <simp4t7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13.0", features = ["rt", "macros"]}
shared_stuff = {path = "../shared_stuff"}
serde_json = "1.0.69"
pretty_env_logger = "0.4.0"
log = "0.4.14"
reqwest = "0.11.6"
ctor = "0.1.21"
dotenv = "0.15.0"

[dev-dependencies]
serial_test = "0.5.1"

