[package]
name = "omdb_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13.0", features = ["rt", "macros"]}
shared_stuff = {path = "../shared_stuff"}
serde_json = "1.0.69"
reqwest = {version = "0.11.6", features = ["json"]}
log = "0.4.14"
anyhow = "1.0.52"
pretty_env_logger = "0.4.0"
ctor = "0.1.21"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dev-dependencies]
