[package]
name = "shared_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.114", features=["derive"]}
serde_json = "1.0.56"
validator = { version = "0.14", features = ["derive"]  }
zxcvbn = "2.1.2"
