[package]
name = "warp_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13.0", features = ["macros", "rt-multi-thread", "parking_lot"]}
warp = {version = "0.3.1", features = ["tls"]}
imdb_autocomplete = {path = "../imdb_autocomplete/"}
log = "0.4.14"
pretty_env_logger = "0.4.0"
shared_stuff = {path = "../shared_stuff"}
bytes = "1.1.0"
http = "0.2.5"
serde_json = "1.0.70"
sqlx = {version = "0.5.9", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"]}
argon2 = "0.3.1"
uuid = {version = "0.8.2", features = ["v4"]}
dotenv = "0.15.0"
ctor = "0.1.21"
validator = "0.14.0"
anyhow = "1.0.51"
lazy_static = "1.4.0"
jsonwebtoken = "7.2.0"
rcgen = "0.8.14"

[dev-dependencies]
validator = { version = "0.14", features = ["derive"]  }


[features]
