[package]
name = "seed_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.5"
log = "0.4.14"
reqwasm = "0.2.1"
reqwest = "0.11.6"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
web-sys = "0.3.55"
yew = "0.18.0"

shared_stuff = {path = "../shared_stuff"}
serde_json = "1.0.70"
yew-router = "0.15.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
