[package]
name = "yew_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.5"
log = "0.4.14"
reqwasm = "0.3.1"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
yew = "0.19.3"
shared_stuff = {path = "../shared_stuff"}
serde_json = "1.0.70"
yew-router = "0.16.0"
load-dotenv = "0.1.2"
lazy_static = "1.4.0"
anyhow = "1.0.51"
gloo-storage = "0.2.0"
web-sys = "0.3.55"
